# swarm-devteam

./: README.md  output.txt  pyproject.toml  run.py
tasks/sum/: sum.py  sum_test.py
tasks/sum/.docs/: instructions.md
tools/: developer_tool.py
